Name:            pandoc-lit
Version:         0.1
Synopsis:        Literate programming with pandoc and lhs2tex
Description:     Literate programming with pandoc and lhs2tex
License:         BSD3
License-file:    LICENSE
Author:          Tillmann Rendel <rendel@informatik.uni-marburg.de>
Maintainer:      Tillmann Rendel <rendel@informatik.uni-marburg.de>
Category:        Development
Build-Type:      Simple
Cabal-Version:   >= 1.6
Copyright:       (c) 2010 Tillmann Rendel

Executable pandoc-lit
  Hs-Source-Dirs:     src
  Main-Is:            pandoc-lit.hs
  Build-Depends:      utf8-string, 
                      base == 4.*, 
                      pandoc == 1.5.*, 
                      regexpr, 
                      directory, 
                      filepath, 
                      process
